--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,4 +26,9 @@ body {
 .pagemaincenter {
   justify-content: center;
   align-items: center;
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
+  color: white;
+
 }
